[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/UI/button/easy_btn.png" type="Texture" id=1]
[ext_resource path="res://asset/UI/button/easy_click.png" type="Texture" id=2]
[ext_resource path="res://asset/UI/button/hard_click.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/button/hard_btn.png" type="Texture" id=4]
[ext_resource path="res://asset/UI/button/medium_btn.png" type="Texture" id=5]
[ext_resource path="res://asset/UI/button/medium_click.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/ArcadeLevel/ArcadeLevel.gd" type="Script" id=7]
[ext_resource path="res://asset/UI/button/back_btn.png" type="Texture" id=8]
[ext_resource path="res://asset/UI/button/high_score_btn.png" type="Texture" id=9]
[ext_resource path="res://asset/UI/MainMenu/background.png" type="Texture" id=10]
[ext_resource path="res://asset/UI/MainMenu/player.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Easy:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( -133.375, 168 ), Vector2( -133.375, 168 ), Vector2( 597, 168 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Medium:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( -133.375, 217 ), Vector2( -133.375, 217 ), Vector2( 597, 217 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hard:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( -133.375, 266 ), Vector2( -133.375, 266 ), Vector2( 597, 266 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BackButton:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.6, -40 ), Vector2( 7.6, -40 ), Vector2( 7.6, 7.6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HighScore:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 799.012, -42.217 ), Vector2( 799.012, -42.217 ), Vector2( 799.012, 7.578 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimCharacter:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 2, 1, 0.5 ),
"update": 0,
"values": [ Vector2( -217.579, -222.918 ), Vector2( 42.0656, 107.475 ), Vector2( 188.116, 157.578 ) ]
}

[node name="ArcadeLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 41.0792 ],
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimCharacter" type="TextureRect" parent="."]
margin_left = -217.579
margin_top = -222.918
margin_right = -27.5787
margin_bottom = -22.9182
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -973.375
margin_top = -72.0
margin_right = -858.375
margin_bottom = -27.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -973.375
margin_top = -23.0
margin_right = -858.375
margin_bottom = 22.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -973.375
margin_top = 26.0
margin_right = -858.375
margin_bottom = 72.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 7.6
margin_top = -40.0
margin_right = 40.6
margin_bottom = -7.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.988
margin_top = -42.217
margin_right = -7.98792
margin_bottom = -9.217
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 1 )
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HighScore" to="." method="_on_HighScore_pressed"]
